# cortex

./: Cargo.toml  README.md  set_dirs  set_dirs.rs  up.md
src/: config.rs  main.rs
src/cli/: command.rs  parser.rs
src/db/: models.rs  repository.rs
src/services/: file_service.rs  mod.rs  search_service.rs
src/tauri-app/: package.json  pnpm-lock.yaml
src/utils/: logging.rs
src/web/: handlers.rs  routes.rs
tests/: integration_tests.rs
