[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

description = "A command-line and web utility for file searching and management"
license = "MIT"
authors = ["Your Name <youremail@example.com>"]
repository = "https://github.com/yourusername/cortex"
[dependencies]
actix-web = "4.9.0"
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
clap = "4.0.33"
walkdir = "2.3.3"
tokio = { version = "1.41.0", features = ["full"] }
